{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 59,
  "lineage": "b1c6ae41-54c7-cce4-b266-8b55ef64f68c",
  "resources": [
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07cb656f36158daa3",
            "arn": "arn:aws:ec2:us-east-1:502882675682:elastic-ip/eipalloc-07cb656f36158daa3",
            "association_id": "eipassoc-0e45601c8875614e6",
            "domain": "vpc",
            "id": "eipalloc-07cb656f36158daa3",
            "instance": "i-00c63a03620a12573",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e5defb133179dd0d",
            "private_dns": "ip-10-0-10-218.ec2.internal",
            "private_ip": "10.0.10.218",
            "public_dns": "ec2-23-21-179-46.compute-1.amazonaws.com",
            "public_ip": "23.21.179.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eip-my-ecr-dev-bastion"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eip-my-ecr-dev-bastion"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.asg.aws_instance.bastion_public",
            "module.asg.aws_instance.db",
            "module.asg.data.aws_ami.myec2type",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc",
            "module.security.aws_security_group.db",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0157af9aea2eef346",
            "arn": "arn:aws:ec2:us-east-1:502882675682:instance/i-00c63a03620a12573",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c63a03620a12573",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "myecrkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5defb133179dd0d",
            "private_dns": "ip-10-0-10-218.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.218",
            "public_dns": "ec2-23-21-179-46.compute-1.amazonaws.com",
            "public_ip": "23.21.179.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a04dd6a31fbce970",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd74ba6055e5ebf9",
            "tags": {
              "Environment": "dev",
              "Name": "bastion-my-ecr-dev-ec2-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion-my-ecr-dev-ec2-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013c5dc11f5bbb490"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.asg.aws_instance.db",
            "module.asg.data.aws_ami.myec2type",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc",
            "module.security.aws_security_group.db",
            "module.security.aws_security_group.public"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0157af9aea2eef346",
            "arn": "arn:aws:ec2:us-east-1:502882675682:instance/i-00fe87315ecbf55a5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00fe87315ecbf55a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "myecrkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03da88d0d2521ce4d",
            "private_dns": "ip-10-0-30-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ae3ba513b7cf2ed",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03388c0389ee1a125",
            "tags": {
              "Environment": "dev",
              "Name": "db-my-ecr-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "db-my-ecr-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-038e71fd7d6fb0918"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.asg.data.aws_ami.myec2type",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.myvpc",
            "module.security.aws_security_group.db"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0094267cc37bd7cde",
            "arn": "arn:aws:ec2:us-east-1:502882675682:elastic-ip/eipalloc-0094267cc37bd7cde",
            "association_id": "eipassoc-0740c39e881db5db3",
            "domain": "vpc",
            "id": "eipalloc-0094267cc37bd7cde",
            "network_border_group": "us-east-1",
            "network_interface": "eni-053148f39b3215631",
            "private_dns": "ip-10-0-10-101.ec2.internal",
            "private_ip": "10.0.10.101",
            "public_dns": "ec2-52-87-255-143.compute-1.amazonaws.com",
            "public_ip": "52.87.255.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eip-my-ecr-1-nat_eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eip-my-ecr-1-nat_eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.my_igw",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:internet-gateway/igw-04f578308da022f64",
            "id": "igw-04f578308da022f64",
            "owner_id": "502882675682",
            "tags": {
              "Name": "igw-my-ecr-dev"
            },
            "tags_all": {
              "Name": "igw-my-ecr-dev"
            },
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0094267cc37bd7cde",
            "association_id": "eipassoc-0740c39e881db5db3",
            "connectivity_type": "public",
            "id": "nat-06e918498698a3e46",
            "network_interface_id": "eni-053148f39b3215631",
            "private_ip": "10.0.10.101",
            "public_ip": "52.87.255.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cd74ba6055e5ebf9",
            "tags": {
              "Environment": "dev",
              "Name": "nat-my-ecr-1-nat_gw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nat-my-ecr-1-nat_gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.my_igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "mynacl_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:network-acl/acl-08545e924fa0114d2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 900,
                "to_port": 0
              }
            ],
            "id": "acl-08545e924fa0114d2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 803,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 802,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 801,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 800,
                "to_port": 3306
              }
            ],
            "owner_id": "502882675682",
            "subnet_ids": [
              "subnet-03388c0389ee1a125"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "nacl-my-ecr-dev-db"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nacl-my-ecr-dev-db"
            },
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "mynacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:network-acl/acl-0a07ce41fab933fc0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              }
            ],
            "id": "acl-0a07ce41fab933fc0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "97.170.56.0/24",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              }
            ],
            "owner_id": "502882675682",
            "subnet_ids": [
              "subnet-0cd74ba6055e5ebf9"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "nacl-my-ecr-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nacl-my-ecr-dev-public-1"
            },
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_db_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2072280667",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08545e924fa0114d2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 802,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_db_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1749032762",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08545e924fa0114d2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 800,
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_db_other",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 32768,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-534695370",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08545e924fa0114d2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 803,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_db_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-203074731",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08545e924fa0114d2",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 801,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-356865250",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a07ce41fab933fc0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-925659801",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a07ce41fab933fc0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_other",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 32768,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1763995961",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a07ce41fab933fc0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "inbound_public_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "97.170.56.0/24",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1964630441",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a07ce41fab933fc0",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_db_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1642616964",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08545e924fa0114d2",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 900,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outbound_public_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1366552649",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a07ce41fab933fc0",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_network_acl.mynacl_public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:route-table/rtb-0059b0f66cb1487b6",
            "id": "rtb-0059b0f66cb1487b6",
            "owner_id": "502882675682",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e918498698a3e46",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rt-my-ecr-dev-db-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rt-my-ecr-dev-db-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.my_igw",
            "module.network.aws_nat_gateway.mynat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lambda_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:route-table/rtb-00a7818aa25b8aecb",
            "id": "rtb-00a7818aa25b8aecb",
            "owner_id": "502882675682",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e918498698a3e46",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rt-my-ecr-dev-lambda-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rt-my-ecr-dev-lambda-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.my_igw",
            "module.network.aws_nat_gateway.mynat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:route-table/rtb-0bee41438813b87dc",
            "id": "rtb-0bee41438813b87dc",
            "owner_id": "502882675682",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f578308da022f64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rt-my-ecr-dev-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rt-my-ecr-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.my_igw",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9f72f99450100b3",
            "route_table_id": "rtb-0059b0f66cb1487b6",
            "subnet_id": "subnet-03388c0389ee1a125"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.my_igw",
            "module.network.aws_nat_gateway.mynat",
            "module.network.aws_route_table.db_private",
            "module.network.aws_subnet.db",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lambda_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086eab3a4fbc88441",
            "route_table_id": "rtb-00a7818aa25b8aecb",
            "subnet_id": "subnet-0e427531a9f247cc1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.my_igw",
            "module.network.aws_nat_gateway.mynat",
            "module.network.aws_route_table.lambda_private",
            "module.network.aws_subnet.lambda_private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d35cb2ce71a5fcb8",
            "route_table_id": "rtb-0bee41438813b87dc",
            "subnet_id": "subnet-0cd74ba6055e5ebf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.my_igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:subnet/subnet-03388c0389ee1a125",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03388c0389ee1a125",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502882675682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-my-ecr-dev-db",
              "Type": "DB"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-my-ecr-dev-db",
              "Type": "DB"
            },
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:subnet/subnet-0e427531a9f247cc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e427531a9f247cc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502882675682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-my-ecr-dev-lambda-private",
              "Type": "Lambda"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-my-ecr-dev-lambda-private",
              "Type": "Lambda"
            },
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:subnet/subnet-0cd74ba6055e5ebf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd74ba6055e5ebf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "502882675682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-my-ecr-dev-public-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-my-ecr-dev-public-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:vpc/vpc-0b8dde5e32abb8497",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03167214a0ec569d2",
            "default_route_table_id": "rtb-0394185e3c6dd0df6",
            "default_security_group_id": "sg-0107cc4a43021b2b7",
            "dhcp_options_id": "dopt-0cd8662b46be596bc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8dde5e32abb8497",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0394185e3c6dd0df6",
            "owner_id": "502882675682",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-my-ecr-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-my-ecr-dev"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:security-group/sg-038e71fd7d6fb0918",
            "description": "DB SG - allow VPC internal access only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound SMTP",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              }
            ],
            "id": "sg-038e71fd7d6fb0918",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security-my-ecr-dev-db-20251106013656046800000004",
            "name_prefix": "security-my-ecr-dev-db-",
            "owner_id": "502882675682",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "db-my-ecr-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "db-my-ecr-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:security-group/sg-049f8dd0f2ffb35ab",
            "description": "Lambda SG - allow outbound internet access for email",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound SMTP",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              }
            ],
            "id": "sg-049f8dd0f2ffb35ab",
            "ingress": [],
            "name": "security-my-ecr-dev-lambda-20251106013656058600000005",
            "name_prefix": "security-my-ecr-dev-lambda-",
            "owner_id": "502882675682",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lambda-my-ecr-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lambda-my-ecr-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:502882675682:security-group/sg-013c5dc11f5bbb490",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013c5dc11f5bbb490",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "97.170.56.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security-my-ecr-dev-public-20251106013656045000000003",
            "name_prefix": "security-my-ecr-dev-public-",
            "owner_id": "502882675682",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "security-my-ecr-dev-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "security-my-ecr-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8dde5e32abb8497"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    }
  ]
}